--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangman U03</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="word-list.js" defer></script>
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/word-list.js" defer></script>
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
