"Last fixes, comments"

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                 <button class="letterButtons" type="button" value="Ö">Ö</button>
             </article>
         </section>
-        <section id="message"> <!--Needs styling in CSS, where win or loose messeage shows, add button for restart-->
-        <!-- here win/Loose text-->
+        <section>
         <button id="startBtn" type="button">Start Game</button>
         </section>
     </main>
